--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <section>
         <h2>What are we doing</h2>
         <ul>
-            <li><img src="/images/what-we-do/webpages.jpg" alt="Computer with webpage opened" width="360" height="300"></li>
-            <li><img src="/images/what-we-do/applications.jpg" alt="mobilephone with app opened" width="360" height="300"></li>
-            <li><img src="/images/what-we-do/ux-design.jpg" alt="hand with smartphone in it" width="360" height="300"></li>
+            <li><img src="./images/what-we-do/webpages.jpg" alt="Computer with webpage opened" width="360" height="300"></li>
+            <li><img src="./images/what-we-do/applications.jpg" alt="mobilephone with app opened" width="360" height="300"></li>
+            <li><img src="./images/what-we-do/ux-design.jpg" alt="hand with smartphone in it" width="360" height="300"></li>
         </ul>
     </section>
 <!--Our team section-->
@@ -74,22 +74,22 @@
     <h2>Our team</h2>
     <ul>
         <li>
-            <img src="/images/our-team/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
+            <img src="./images/our-team/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
             <p>Mark Guerrero</p>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="/images/our-team/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
+            <img src="./images/our-team/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
             <p>Tom Ford</p>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="/images/our-team/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
+            <img src="./images/our-team/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
             <p>Camila Garcia</p>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="/images/our-team/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260">
+            <img src="./images/our-team/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260">
             <p>Daniel Wilson</p>
             <p>UI Designer</p>
         </li>
