--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
 <body>
     <!--Header section-->
     <header>
-        <a href="./index.html">
-        <p>WEBSTUDIO</p>
-        </a>
+
         <nav>
+            <a href="./index.html">
+                <p>WEBSTUDIO</p>
+            </a>
             <ul>
                 <li> <a href="#">Studio</a></li>
                 <li> <a href="#">Portfolio</a></li>
                 <li> <a href="#">Contacts</a></li>
             </ul>
         </nav>
+        <address>
+
         <ul>
             <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li>
-            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+            <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
         </ul>
+        </address>
     </header>
     <main>
         <!--Hero section-->
@@ -41,20 +45,19 @@
     <h2 hidden>Main features</h2>
     <ul>
         <li>
-            <p>Strategy</p>
-            <p>Our goal is to identify the business
-            problem to walk away with the perfect and creative solution.</p>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
         </li>
         <li>
-            <p>Punctuality</p>
+            <h3>Punctuality</h3>
             <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
         <li>
-            <p>Diligence</p>
+            <h3>Diligence</h3>
             <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
         <li>
-            <p>Technologies</p>
+            <h3>Technologies</h3>
             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
     </ul>
@@ -71,26 +74,26 @@
     </section>
 <!--Our team section-->
 <section>
-    <h2>Our team</h2>
+    <h2>Our Team</h2>
     <ul>
         <li>
             <img src="./images/our-team/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-            <p>Mark Guerrero</p>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
         </li>
         <li>
             <img src="./images/our-team/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
-            <p>Tom Ford</p>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
             <img src="./images/our-team/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
-            <p>Camila Garcia</p>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
         </li>
         <li>
             <img src="./images/our-team/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260">
-            <p>Daniel Wilson</p>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
     </ul>
