--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <header>
 
         <nav>
-            <a href="./index.html">
-                <p>WEBSTUDIO</p>
+            <a href="./index.html">WEBSTUDIO
             </a>
             <ul>
                 <li> <a href="#">Studio</a></li>
@@ -101,8 +100,7 @@
 </main>
 <!--Footer-->
 <footer>
-<a href="./index.html">
-    <p>WEBSTUDIO</p>
+<a href="./index.html">WEBSTUDIO
 </a>
      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>   
     </footer>
